--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,17 +3,17 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block contentTitle %}
-    <div class="row" id="contact">
+    <div class="row">
         <div class="col-12">
-            <h2 class="text-center text-contact">Contacts :</h2>
+            <h2 class="text-center text-orange">Contacts :</h2>
         </div>
-        <div class="col-xs-12 col-md-6">
-            <h4 class="text-contact text-center">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            <h4 class="text-contact text-center text-orange f-large f-weight">
                 <i class="fas fa-phone-alt"></i> : 07 66 63 80 02
             </h4>
         </div>
-        <div class="col-xs-12 col-sm-6">
-            <h4 class="text-contact text-center">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+            <h4 class="text-orange f-weight text-center">
                 <i class="fas fa-envelope"></i> : patouillard.frederic@outlook.fr
             </h4>
         </div>
