--- a/templates/devis/index.html.twig
+++ b/templates/devis/index.html.twig
@@ -2,19 +2,8 @@
 
 {% block title %}Hello DevisController!{% endblock %}
 
-{% block contentBody %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
+{% block contentTitle %}
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/patouillard/hop_Hop_Hop_Livraison/src/Controller/DevisController.php'|file_link(0) }}">src/Controller/DevisController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/patouillard/hop_Hop_Hop_Livraison/templates/devis/index.html.twig'|file_link(0) }}">templates/devis/index.html.twig</a></code></li>
-    </ul>
+    <h1 class="text-orange">Hello {{ controller_name }}! ✅</h1>
 </div>
 {% endblock %}
