--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,32 +4,25 @@
 {% block contentTitle %}
     <div class="row containerTitle" id="contact">
         <div class="col-12">
-            <h2 class="text-center text-contact">Register :</h2>
+            <h2 class="text-center text-orange">Register :</h2>
         </div>
     </div>
-{% endblock %}
-{% block contentBody %}
-        <div class="row">
-            <div class="col-12 text-center">
-                <h1 class="mt-3 mb-3">Register</h1>
-            </div>
-        </div>
-        {{ form_start(registrationForm) }}
+    {{ form_start(registrationForm) }}
 
-        <div class="row">
-            <div class="col-12">
-                {{ form_widget(registrationForm.email) }}
-            </div>
-            <div class="col-12">
-                {{ form_widget(registrationForm.plainPassword) }}
-            </div>
-            <div class="col-12 text-center">
-                {{ form_label(registrationForm.agreeTerms) }}<br>
-                {{ form_widget(registrationForm.agreeTerms) }}
-            </div>
-            <div class="col-12 text-center mt-3 mb-3">
-                <button class="btn btn-success">Register</button>
-            </div>
+    <div class="row">
+        <div class="col-12">
+            {{ form_widget(registrationForm.email) }}
         </div>
+        <div class="col-12">
+            {{ form_widget(registrationForm.plainPassword) }}
+        </div>
+        <div class="col-12 text-center">
+            {{ form_label(registrationForm.agreeTerms) }}<br>
+            {{ form_widget(registrationForm.agreeTerms) }}
+        </div>
+        <div class="col-12 text-center mt-3 mb-3">
+            <button class="btn btn-success">Register</button>
+        </div>
+    </div>
     {{ form_end(registrationForm) }}
 {% endblock %}
