--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1006,7 +1006,7 @@ h3 {
   font-weight: 400;
   display: inline-block;
   padding: 0px 0px 0px 0px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Bree Serif', serif;
   position: relative;
   text-transform: capitalize;
 }
