--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -2,28 +2,25 @@
     <div class="container">
         <div class="header_bottom_border">
             <div class="row align-items-center">
-                <div class="col-md-1 text-center">
+                <div class="col-xs-1 d-lg-none hidden-xl text-center">
                     <a href="{{path('home')}}">
                         <h1 class="text-orange titre">
-                            HHHL
+                            Hop Hop Hop Livraison
                         </h1>
                     </a>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-12 text-center">
                     <div class="main-menu  d-none d-lg-block">
                         <nav>
                             <ul id="navigation">
                                 <li>
-                                    <a role="menuitem" class="menu" href="{{path('home')}}">Présentation</a>
+                                    <a role="menuitem" href="{{path('home')}}">Présentation</a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" class="menu" href="about.html">Transports</a>
+                                    <a role="menuitem" href="{{ path('transports') }}">Transports</a>
                                 </li>
                                 <li>
-                                    <a role="menuitem" class="menu" href="service.html">Services</a>
-                                </li>
-                                <li class="d-lg-none hidden-xl">
-                                    <a class="menu" href="{{path('french_rdv')}}">Prise Rdv</a>
+                                    <a role="menuitem" href="{{ path('services') }}">Services</a>
                                 </li>
                                 <li class="d-lg-none hidden-xl">
                                     <a class="menu" href="{{path('french_rdv')}}">Prise Rdv</a>
