--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,12 @@
             {{ form_widget(registrationForm.email) }}
         </div>
         <div class="col-12">
+            {{ form_widget(registrationForm.username) }}
+        </div>
+        <div class="col-12">
+            {{ form_widget(registrationForm.phone) }}
+        </div>
+        <div class="col-12">
             {{ form_widget(registrationForm.plainPassword) }}
         </div>
         <div class="col-12 text-center">
