--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-6 col-md-6 col-12">
+                        <div class="col-12">
                             <form class="text-center">
                                 <div class="form-group">
                                     <div class="col-12 mb-2 text-center">
@@ -117,13 +117,6 @@
                                 </div>
                                 <button class="btn btn-success">Envoyer</button>
                             </form>
-                        </div>
-                        <div class="col-sm-6 col-md-6 col-12">
-                            <div class="row">
-                                {% for provider in providers %}
-                                    <img src="{{ provider.logo }}" class="imgs" alt="">
-                                {% endfor %}
-                            </div>
                         </div>
                     </div>
                 </div>
