--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,7 +11,11 @@
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
+    {% if error %}
+        <div class="alert alert-danger" role="alert">
+             {{ error }}
+        </div>
+    {% endif %}
     {% if app.user %}
         <div class="mb-3">
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
