--- a/templates/appoint/index.html.twig
+++ b/templates/appoint/index.html.twig
@@ -22,7 +22,7 @@
                         </p>
                     </div>
                     <div class="col-sm-6 text-right">
-                        {{ form_widget(forms.residences, { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_widget(forms.residences, { 'attr': {'class': 'custom-select text-center'} }) }}
                     </div>
                 </div>
                 <div class="form-group row">
@@ -34,6 +34,7 @@
                     <div class="col-sm-6 text-left">
                         <input id="phone" 
                             type="tel" class="form-control"
+                            value="{{tel}}"
                             name="phone" min="0"/>
                     </div>
                 </div>
