--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
     </div>
     <form method="post" autocomplete="off">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">{{ error }}</div>
     {% endif %}
     {% if error %}
         <div class="alert alert-danger" role="alert">
